--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -30,7 +30,7 @@
   "user_information_save": "Kaydet",
   "user_information_delete": "Profil Sil",
   "role": "Doktor musunuz",
-  "our_project_name": "Projemiz Ekibi",
+  "our_project_name": "Proje Ekibi",
   "announcement": "Duyurular",
   "categories": "Kategoriler",
   "profil": "Profil",
