--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -1,6 +1,7 @@
 {
   "locale": "en",
   "login": "Login",
+  "login_successful": "Login Successful",
   "hello": "Hello {username}",
   "app_name": "Harpia",
   "title_activity_splash_screen": "Harpia",
