--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -1,5 +1,6 @@
 {
   "locale": "tr",
+  "login_successful": "Giriş Başarılı",
   "app_name": "Harpia",
   "title_activity_splash_screen": "Harpia",
   "hakan_aydin": "Tüm hakları saklıdır",
