--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -16,6 +16,11 @@
   "prompt_password": "Password",
   "error_invalid_email": "This email address is invalid",
   "name": "Name",
+  "enter_your_name":"Enter your name",
+  "enter_your_surname": "Please enter your last name",
+  "nationality_id": "National ID number",
+  "institue": "Institution",
+  "enter_your_nationality_id": "Please enter your national ID number",
   "register": "Register",
   "not_register": "Not Register?",
   "title_activity_dashboard": "DashboardActivity",
@@ -91,6 +96,10 @@
   "employed_institution": "Employed Institution",
   "surname": "Surname",
   "register_panel": "Doctor Register Panel",
+  "patient_register_panel": "Patient Registration Panel",
+  "please_enter_the_password":"Please enter the password",
+  "phone_number": "Phone",
+  "enter_your_phone": "Please enter your mobile phone number",
   "takvim": "Calendar",
   "hasta_bilgisi_": "Patient Information:",
   "pdf_cikti": "PDF Output",
