--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -15,6 +15,11 @@
   "login": "Entrée",
   "error_invalid_email": "Cette adresse e-mail est invalide",
   "name": "Nom",
+  "enter_your_name":"Entrez votre nom",
+  "enter_your_surname": "Veuillez entrer votre nom de famille",
+  "nationality_id": "Numéro d'identification national",
+  "institue": "Institution",
+  "enter_your_nationality_id": "Veuillez entrer votre numéro d'identification national",
   "register": "Enregistrer",
   "not_register": "Déjà enregistré ?",
   "title_activity_dashboard": "DashboardActivity",
@@ -90,6 +95,10 @@
   "employed_institution": "Établissement Employé",
   "surname": "Nom de famille",
   "register_panel": "Docteur Panneau D'enregistrement",
+  "patient_register_panel": "Panneau d'inscription des patients",
+  "please_enter_the_password":"Veuillez entrer votre mot de passe",
+  "phone_number": "Téléphone",
+  "enter_your_phone": "Veuillez saisir votre numéro de téléphone portable",
   "takvim": "Calendrier",
   "hasta_bilgisi_": "Renseignements Patient :",
   "pdf_cikti": "Sortie PDF",
