--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -15,6 +15,14 @@
   "error_invalid_email": "Bu e-posta adresi geçersiz",
   "username_or_password_error": "Kullanıcı Adı veya şifre geçersiz",
   "name": "Ad",
+  "surname": "Soyad",
+  "enter_your_name":"Adınızı giriniz",
+  "enter_your_surname":"Soyadınızı giriniz",
+  "nationality_id":"TC Kimlik No",
+  "enter_your_nationality_id":"Lütfen TC Kimlik Numaranızı giriniz",
+  "institue": "Kurum",
+  "phone_number": "Telefon",
+  "enter_your_phone": "Lütfen cep telefon numaranızı giriniz",
   "register": "Kayıt Ol",
   "not_register": "Henüz Kayıtlı Değil misiniz?",
   "title_activity_dashboard": "DashboardActivity",
@@ -90,6 +98,8 @@
   "employed_institution": "Çalışılan Kurum",
   "surname": "Soyad",
   "register_panel": "Doktor Kayıt Paneli",
+  "patient_register_panel": "Hasta Kayıt Paneli",
+  "please_enter_the_password":"Lütfen şifrenizi giriniz",
   "takvim": "Takvim",
   "hasta_bilgisi_": "Hasta Bilgisi:",
   "pdf_cikti": "PDF Çıktı",
