--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -15,6 +15,11 @@
   "login": "入口",
   "error_invalid_email": "此电子邮件地址无效",
   "name": "姓名",
+  "enter_your_name":"输入你的名字",
+  "enter_your_surname": "请输入您的姓氏",
+  "nationality_id": "国民身份证号码",
+  "enter_your_nationality_id": "请输入您的国民身份证号码",
+  "institue": "机构",
   "register": "登记",
   "not_register": "已经注册?",
   "title_activity_dashboard": "DashboardActivity",
@@ -29,6 +34,7 @@
   "password_control": "密码不采用适当的格式",
   "password_want": "请求密码",
   "password_appropriate_message": "您应该至少输入一个大密码，至少一个小写，至少一个数字和至少一个特殊字符。",
+  "enter_your_phone": "请输入您的手机号码",
   "user_information_save": "节省",
   "user_information_delete": "删除配置文件",
   "role": "你是医生吗",
@@ -90,6 +96,9 @@
   "employed_institution": "就职单位",
   "surname": "姓",
   "register_panel": "医生 注册面板",
+  "patient_register_panel": "患者注册面板",
+  "please_enter_the_password":"请输入密码",
+  "phone_number": "电话号码",
   "takvim": "日历",
   "hasta_bilgisi_": "患者信息：",
   "pdf_cikti": "PDF 输出",
