--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -41,7 +41,9 @@
   "our_project_name": "Our Project Team",
   "announcement": "Announcements",
   "categories": "Categories",
+  "patient": "Patient",
   "profil": "Profile",
+  "doctor": "Doctor",
   "project_leader": "Project leader",
   "project_researcher": "Project Researcher",
   "view_all": "View All",
