--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -22,6 +22,8 @@
   "enter_your_nationality_id":"Lütfen TC Kimlik Numaranızı giriniz",
   "institue": "Kurum",
   "phone_number": "Telefon",
+  "doctor": "Doktor",
+  "patient":"Hasta",
   "enter_your_phone": "Lütfen cep telefon numaranızı giriniz",
   "register": "Kayıt Ol",
   "not_register": "Henüz Kayıtlı Değil misiniz?",
