--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -15,6 +15,8 @@
   "login": "入口",
   "error_invalid_email": "此电子邮件地址无效",
   "name": "姓名",
+  "doctor": "医生",
+  "patient": "病人",
   "enter_your_name":"输入你的名字",
   "enter_your_surname": "请输入您的姓氏",
   "nationality_id": "国民身份证号码",
