--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -44,6 +44,14 @@
   "patient": "Patient",
   "profil": "Profile",
   "doctor": "Doctor",
+  "please_enter_your_first_name":"Please enter your first name",
+  "please_enter_your_last_name":"Please enter your last name",
+  "please_enter_your_nationality_TC_number":"Please enter your Nationality TC numer",
+  "please_enter_your_birtday_time": "Please enter your birthdate",
+  "please_enter_your_institution": "Please enter your institution of work",
+  "please_enter_mail_address_in_the_appropriate_format": "Please enter your email address in the appropriate format",
+  "please_enter_password_that_is_difficult_to_guess": "Please enter a password that is difficult to guess",
+  "please_enter_your_phone_number": "Please enter your phone number",
   "project_leader": "Project leader",
   "project_researcher": "Project Researcher",
   "view_all": "View All",
