--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -17,6 +17,14 @@
   "name": "Nom",
   "doctor": "Médecin",
   "patient": "Patient",
+  "please_enter_your_first_name": "Veuillez saisir votre prénom",
+  "please_enter_your_last_name": "Veuillez saisir votre nom de famille",
+  "please_enter_your_nationality_TC_number": "Veuillez entrer votre numéro de TC de nationalité",
+  "please_enter_your_birtday_time": "Veuillez entrer votre date de naissance",
+  "please_enter_your_institution": "Veuillez entrer votre institution de travail",
+  "please_enter_mail_address_in_the_appropriate_format": "Veuillez saisir votre adresse e-mail dans le format approprié",
+  "please_enter_password_that_is_difficult_to_guess": "Veuillez entrer un mot de passe difficile à deviner",
+  "please_enter_your_phone_number": "Veuillez entrer votre numéro de téléphone",
   "enter_your_name":"Entrez votre nom",
   "enter_your_surname": "Veuillez entrer votre nom de famille",
   "nationality_id": "Numéro d'identification national",
