--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -24,6 +24,14 @@
   "phone_number": "Telefon",
   "doctor": "Doktor",
   "patient":"Hasta",
+  "please_enter_your_first_name": "Lütfen adınızı girin",
+  "please_enter_your_last_name": "Lütfen soyadınızı girin",
+  "please_enter_your_nationality_TC_number": "Vatandaşlık TC numaranızı giriniz",
+  "please_enter_your_birtday_time": "Lütfen doğum tarihinizi girin",
+  "please_enter_your_institution": "Lütfen çalıştığınız kurumu girin",
+  "please_enter_mail_address_in_the_appropriate_format": "Lütfen uygun formatta kullandığınız mail adresi girin",
+  "please_enter_password_that_is_difficult_to_guess":"Lütfen tahmin edilmesi zor bir şifre giriniz",
+  "please_enter_your_phone_number": "Lütfen telefon numaranızı girin",
   "enter_your_phone": "Lütfen cep telefon numaranızı giriniz",
   "register": "Kayıt Ol",
   "not_register": "Henüz Kayıtlı Değil misiniz?",
