--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -17,6 +17,14 @@
   "name": "姓名",
   "doctor": "医生",
   "patient": "病人",
+  "please_enter_your_first_name": "请输入您的名字",
+  "please_enter_your_last_name": "请输入您的姓氏",
+  "please_enter_your_nationality_TC_number": "请输入您的国籍 TC 号码",
+  "please_enter_your_birtday_time": "请输入您的出生日期",
+  "please_enter_your_institution": "请输入您的工作机构",
+  "please_enter_mail_address_in_the_appropriate_format": "请以正确的格式输入您的电子邮件地址",
+  "please_enter_password_that_is_difficult_to_guess": "请输入难以猜测的密码",
+  "please_enter_your_phone_number": "请输入您的电话号码",
   "enter_your_name":"输入你的名字",
   "enter_your_surname": "请输入您的姓氏",
   "nationality_id": "国民身份证号码",
