register and login page update

--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -52,6 +52,9 @@
   "please_enter_mail_address_in_the_appropriate_format": "Please enter your email address in the appropriate format",
   "please_enter_password_that_is_difficult_to_guess": "Please enter a password that is difficult to guess",
   "please_enter_your_phone_number": "Please enter your phone number",
+  "username": "Username",
+  "number_of_entered_password_characters_must_be_greater_than_6":"The number of entered password characters must be greater than 6",
+  "please_enter_username": "Please enter a username",
   "project_leader": "Project leader",
   "project_researcher": "Project Researcher",
   "view_all": "View All",
