--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -26,6 +26,9 @@
   "please_enter_password_that_is_difficult_to_guess": "Veuillez entrer un mot de passe difficile à deviner",
   "please_enter_your_phone_number": "Veuillez entrer votre numéro de téléphone",
   "enter_your_name":"Entrez votre nom",
+  "username": "Nom d'utilisateur",
+  "please_enter_username": "Veuillez entrer un nom d'utilisateur",
+  "number_of_entered_password_characters_must_be_greater_than_6": "Le nombre de caractères de mot de passe saisis doit être supérieur à 6",
   "enter_your_surname": "Veuillez entrer votre nom de famille",
   "nationality_id": "Numéro d'identification national",
   "institue": "Institution",
