--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -16,6 +16,9 @@
   "username_or_password_error": "Kullanıcı Adı veya şifre geçersiz",
   "name": "Ad",
   "surname": "Soyad",
+  "username": "Kullanıcı Adı",
+  "please_enter_username": "Lütfen kullanıcı adınızı giriniz",
+  "number_of_entered_password_characters_must_be_greater_than_6": "Girilen şifre karakter sayısı 6'dan büyük olmalıdır",
   "enter_your_name":"Adınızı giriniz",
   "enter_your_surname":"Soyadınızı giriniz",
   "nationality_id":"TC Kimlik No",
