--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -30,6 +30,9 @@
   "nationality_id": "国民身份证号码",
   "enter_your_nationality_id": "请输入您的国民身份证号码",
   "institue": "机构",
+  "username": "用户名",
+  "please_enter_username": "请输入用户名",
+  "number_of_entered_password_characters_must_be_greater_than_6": "输入的密码字符数必须大于6",
   "register": "登记",
   "not_register": "已经注册?",
   "title_activity_dashboard": "DashboardActivity",
