get login springboot backend

--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -55,7 +55,14 @@
   "username": "Username",
   "number_of_entered_password_characters_must_be_greater_than_6":"The number of entered password characters must be greater than 6",
   "please_enter_username": "Please enter a username",
+  "please_enter_the_hospital_internal_ip_address": "Please enter the hospital's internal IP address.",
   "project_leader": "Project leader",
+  "success": "Successful",
+  "failed": "Failed",
+  "registration_successful": "Registration Successful",
+  "registration_failed": "Registration Failed",
+  "you_have_successfully_registered": "You have successfully registered.",
+  "registration_failed_please_try_again.": "Registration failed. Please try again.",
   "project_researcher": "Project Researcher",
   "view_all": "View All",
   "bluetooth": "Bluetooth Initiated",
