--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -30,7 +30,14 @@
   "please_enter_username": "Veuillez entrer un nom d'utilisateur",
   "number_of_entered_password_characters_must_be_greater_than_6": "Le nombre de caractères de mot de passe saisis doit être supérieur à 6",
   "enter_your_surname": "Veuillez entrer votre nom de famille",
+  "please_enter_the_hospital_internal_ip_address": "Veuillez entrer l'adresse IP interne de l'hôpital.",
   "nationality_id": "Numéro d'identification national",
+  "success": "Réussi",
+  "failed": "Échoué",
+  "registration_successful": "Inscription réussie",
+  "registration_failed": "Inscription échouée",
+  "you_have_successfully_registered": "Vous vous êtes inscrit avec succès.",
+  "registration_failed_please_try_again.": "L'inscription a échoué. Veuillez réessayer.",
   "institue": "Institution",
   "enter_your_nationality_id": "Veuillez entrer votre numéro d'identification national",
   "register": "Enregistrer",
