--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -1,6 +1,8 @@
 {
   "locale": "tr",
   "login_successful": "Giriş Başarılı",
+  "success":"Başarılı",
+  "failed":"Başarısız",
   "app_name": "Harpia",
   "title_activity_splash_screen": "Harpia",
   "hakan_aydin": "Tüm hakları saklıdır",
@@ -39,6 +41,9 @@
   "register": "Kayıt Ol",
   "not_register": "Henüz Kayıtlı Değil misiniz?",
   "title_activity_dashboard": "DashboardActivity",
+  "registration_successful": "Kayıt Başarılı",
+  "you_have_successfully_registered": "Başarılı bir şekilde kayıt oldunuz.",
+  "registration_failed_please_try_again.": "Kayıt başarısız. Lütfen tekrar deneyin.",
   "cancel": "İptal",
   "recover": "Kurtar",
   "recover_password": "Şifreyi Kurtar",
@@ -46,6 +51,7 @@
   "setting_save": "Kaydet",
   "facility_name": "Tesis Adı",
   "internal_ip": "İç IP",
+  "registration_failed": "Kayıt Başarısız",
   "external_ip": "Dış IP",
   "password_control": "Şifre uygun formatta değil",
   "password_want": "Şifre isteniyor",
@@ -161,6 +167,7 @@
   "tedavi_icin_degil": "Tedavi kararları için değil",
   "bu_uygulamada_sunulan": "Bu uygulamada sunulan bilgiler tedavi veya dozlama kararları için kullanılmamalıdır.",
   "Close": "Kapat",
+  "please_enter_the_hospital_internal_ip_addres":"Lütfen ilgili hastanenin iç ip adresini giriniz",
   "baslik": "Konu",
   "lutfen_baslik_ekleyin": "Lütfen Hatayı Bildiriniz",
   "character_number": "Karakter Sayısı",
