--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -34,6 +34,13 @@
   "please_enter_username": "请输入用户名",
   "number_of_entered_password_characters_must_be_greater_than_6": "输入的密码字符数必须大于6",
   "register": "登记",
+  "please_enter_the_hospital_internal_ip_address": "请填写医院的内部IP地址。",
+  "success": "成功",
+  "failed": "失败",
+  "registration_successful": "注册成功",
+  "registration_failed": "注册失败",
+  "you_have_successfully_registered": "您已成功注册。",
+  "registration_failed_please_try_again.": "注册失败。请重试。",
   "not_register": "已经注册?",
   "title_activity_dashboard": "DashboardActivity",
   "cancel": "取消",
