--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -40,7 +40,7 @@
   "registration_successful": "注册成功",
   "registration_failed": "注册失败",
   "you_have_successfully_registered": "您已成功注册。",
-  "registration_failed_please_try_again.": "注册失败。请重试。",
+  "registration_failed_please_try_again": "注册失败。请重试。",
   "not_register": "已经注册?",
   "title_activity_dashboard": "DashboardActivity",
   "cancel": "取消",
