language update for loginscreen.dart

--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -3,6 +3,8 @@
   "login": "Login",
   "login_successful": "Login Successful",
   "hello": "Hello {username}",
+  "error": "Error",
+  "failed_to_connect_to_the_server_please_try_again":"Failed to connect to the server. Please try again later.",
   "app_name": "Harpia",
   "title_activity_splash_screen": "Harpia",
   "hakan_aydin": "Copyright All rights reserved",
