--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -8,6 +8,7 @@
   "step_by_step": "Harpia Danışmanlık ve Mühendislik Hizmetleri",
   "password": "Mot de passe",
   "error": "Erreur",
+  "no_account_with_such_a_username_was_found": "Aucun compte avec un tel nom d'utilisateur n'a été trouvé.",
   "failed_to_connect_to_the_server_please_try_again": "Échec de la connexion au serveur. Veuillez réessayer ultérieurement.",
   "prompt_email": "Poster",
   "create_new": "Appuyez pour vous inscrire",
