add doctorTriaj page

--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -4,6 +4,7 @@
   "login_successful": "Login Successful",
   "skip":"Skip",
   "get_started_now":"Get Started now",
+  "frequently_asked_question":"Frequently Asked Questions",
   "take_care_of_your_health":"Take care of your health",
   "please_walk_everyday":"Take outdoor walks whenever weather allows. Don't forget to protect yourself from sunlight. You can relax both physically and mentally by taking at least half an hour of brisk walking during the day.",
   "hello": "Hello {username}",
