--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -4,6 +4,7 @@
   "login_successful": "Connexion réussie",
   "skip":"Passer",
   "get_started_now":"Commencer maintenant",
+  "frequently_asked_question":"Foire Aux Questions Fréquentes",
   "take_care_of_your_health":"Prenez soin de votre santé",
   "please_walk_everyday": "Faites des promenades en plein air dès que le temps le permet. N'oubliez pas de vous protéger du soleil. Vous pouvez vous détendre à la fois physiquement et mentalement en marchant au moins une demi-heure par jour.",
   "title_activity_splash_screen": "Harpia",
