--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -4,6 +4,7 @@
   "take_care_of_your_health":"Sağlığınıza önem verin",
   "skip":"Atla",
   "get_started_now":"Hadi Başlayalım",
+  "frequently_asked_question":"Sıkça Sorulan Sorular",
   "please_walk_everyday":"Hava şartları izin verdiği sürece açık hava yürüyüşleri yapın. Tabi güneş ışınlarından korunmayı ihmal etmeyerek. Gün içinde en yarım saat tempolu yürüyüş yaparak hem fiziksel he de ruhsal olarak rahatlayabilirsiniz",
   "success":"Başarılı",
   "failed":"Başarısız",
