--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -4,6 +4,7 @@
   "login_successful": "登录成功",
   "skip":"跳过",
   "get_started_now":"现在开始",
+  "frequently_asked_question":"常见问题",
   "title_activity_splash_screen": "Harpia",
   "take_care_of_your_health":"关心您的健康",
   "please_walk_everyday":"只要天气允许，尽量进行户外漫步。不要忘记保护自己免受阳光照射。每天至少半小时的快步行走，既能让您身体放松，也能让您精神愉悦。",
