--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -5,6 +5,7 @@
   "skip":"Passer",
   "get_started_now":"Commencer maintenant",
   "frequently_asked_question":"Foire Aux Questions Fréquentes",
+  "set_hipo_and_hiper_success": "Les valeurs d'hypo et d'hyper glycémie ont été mises à jour avec succès",
   "take_care_of_your_health":"Prenez soin de votre santé",
   "please_walk_everyday": "Faites des promenades en plein air dès que le temps le permet. N'oubliez pas de vous protéger du soleil. Vous pouvez vous détendre à la fois physiquement et mentalement en marchant au moins une demi-heure par jour.",
   "title_activity_splash_screen": "Harpia",
