--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -2,6 +2,7 @@
   "locale": "tr",
   "login_successful": "Giriş Başarılı",
   "take_care_of_your_health":"Sağlığınıza önem verin",
+  "set_hipo_and_hiper_success":"Hipo Glisemi ve Hiper Glisemi Değerleri başarılı bir şekilde güncellendi",
   "skip":"Atla",
   "get_started_now":"Hadi Başlayalım",
   "frequently_asked_question":"Sıkça Sorulan Sorular",
