--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -2,6 +2,7 @@
   "locale": "en",
   "login": "Login",
   "login_successful": "Login Successful",
+  "set_hipo_and_hiper_success": "Hypo and Hyper Glycemia values updated successfully",
   "skip":"Skip",
   "get_started_now":"Get Started now",
   "frequently_asked_question":"Frequently Asked Questions",
