--- a/harpia_project_v2/assets/translations/en.json
+++ b/harpia_project_v2/assets/translations/en.json
@@ -4,6 +4,11 @@
   "login_successful": "Login Successful",
   "set_hipo_and_hiper_success": "Hypo and Hyper Glycemia values updated successfully",
   "skip":"Skip",
+  "exercise": "Exercise","exercise_answer": "Exercise is important, especially for preventing cardiovascular diseases. Therefore, it is beneficial to engage in at least 150 minutes of exercise per week. Even a simple walk can help you take a step towards a healthier life in the future.",
+  "healthy_eating": "Healthy Eating",
+  "healthy_eating_answer": "Healthy eating is about consuming an adequate and balanced diet. To ensure the regular and balanced functioning of the cells that make up our body, we should consume sufficient amounts of nutrients, including fats, carbohydrates, proteins, vitamins, and minerals.",
+  "mental": "Relax Mentally",
+  "mental_answer": "Life is always filled with problems. Therefore, instead of exhausting ourselves with unsolvable problems, accepting them and learning to live with them brings peace, allows us to stay in the present moment, and makes life easier.",
   "get_started_now":"Get Started now",
   "frequently_asked_question":"Frequently Asked Questions",
   "take_care_of_your_health":"Take care of your health",
