--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -4,7 +4,12 @@
   "take_care_of_your_health":"Sağlığınıza önem verin",
   "set_hipo_and_hiper_success":"Hipo Glisemi ve Hiper Glisemi Değerleri başarılı bir şekilde güncellendi",
   "skip":"Atla",
+  "exercise": "Egzersiz","exercise_answer":"Egzersiz özellikle kalp damar hastalıklarından korunmak için önemlidir. Bu nedenle haftada en az 150 dakika egzersiz yapmanda yarar var. Basit bir yürüyüş bile ileride daha sağlıklı bir hayata adım atmana yardımcı olacak.",
+  "healthy_eating":"Sağlıklı Beslenme",
   "get_started_now":"Hadi Başlayalım",
+  "healthy_eating_answer":"Sağlıklı beslenme yeterli ve dengeli beslenmedir.Vücudumuzu oluşturan hücrelerin düzenli ve dengeli çalışması için besin öğelerinden yani yağlar, karbonhidratlar, proteinler, vitaminler ve minerallerden yeterli miktarda almalıyız.",
+  "mental":"Ruhsal olarak rahatlayın",
+  "mental_answer":" Hayat her zaman sorunlarla doludur. Bu nedenle çözülemeyecek sorunlarla kendimizi yıpratacağımıza onları kabullenmek ve onlarla birlikte yaşamayı öğrenmek huzur verir, anda kalmayı sağlar ve hayatı kolaylaştırır.",
   "frequently_asked_question":"Sıkça Sorulan Sorular",
   "please_walk_everyday":"Hava şartları izin verdiği sürece açık hava yürüyüşleri yapın. Tabi güneş ışınlarından korunmayı ihmal etmeyerek. Gün içinde en yarım saat tempolu yürüyüş yaparak hem fiziksel he de ruhsal olarak rahatlayabilirsiniz",
   "success":"Başarılı",
