--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -2,7 +2,11 @@
   "locale": "zh",
   "app_name": "Harpia",
   "login_successful": "登录成功",
-  "skip":"跳过",
+  "skip":"跳过","exercise": "运动",
+  "exercise_answer": "锻炼很重要，特别是预防心血管疾病。因此，每周至少进行150分钟的锻炼是有益的。即使是简单的散步也可以帮助你迈向更健康的生活。",
+  "healthy_eating": "健康饮食","healthy_eating_answer": "健康饮食意味着摄入足够和平衡的饮食。为了确保构成我们身体的细胞的正常和平衡功能，我们应该摄取足够的营养物质，包括脂肪、碳水化合物、蛋白质、维生素和矿物质。",
+  "mental": "心灵放松",
+  "mental_answer": "生活总是充满问题。因此，与其让自己为无法解决的问题而疲惫不堪，不如接受它们并学会与其共存，这样能带来宁静，让我们能够活在当下，并使生活变得更加轻松。",
   "get_started_now":"现在开始",
   "frequently_asked_question":"常见问题",
   "set_hipo_and_hiper_success": "低血糖和高血糖值已成功更新",
