--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -2,7 +2,11 @@
   "locale": "fr",
   "app_name": "Harpia",
   "login_successful": "Connexion réussie",
-  "skip":"Passer",
+  "skip":"Passer","exercise": "Exercice","exercise_answer": "L'exercice est important, surtout pour prévenir les maladies cardiovasculaires. Par conséquent, il est bénéfique de pratiquer au moins 150 minutes d'exercice par semaine. Même une simple promenade peut vous aider à faire un pas vers une vie plus saine à l'avenir.",
+  "healthy_eating": "Alimentation Saine",
+  "healthy_eating_answer": "Une alimentation saine consiste à consommer une alimentation adéquate et équilibrée. Pour assurer le fonctionnement régulier et équilibré des cellules qui composent notre corps, nous devons consommer des quantités suffisantes de nutriments, notamment des lipides, des glucides, des protéines, des vitamines et des minéraux.",
+  "mental": "Détendez-vous Mentalement",
+  "mental_answer": "La vie est toujours remplie de problèmes. Par conséquent, au lieu de nous épuiser avec des problèmes insolubles, les accepter et apprendre à vivre avec eux apporte la paix, nous permet de rester dans le moment présent et facilite la vie.",
   "get_started_now":"Commencer maintenant",
   "frequently_asked_question":"Foire Aux Questions Fréquentes",
   "set_hipo_and_hiper_success": "Les valeurs d'hypo et d'hyper glycémie ont été mises à jour avec succès",
