--- a/harpia_project_v2/assets/translations/tr.json
+++ b/harpia_project_v2/assets/translations/tr.json
@@ -1,5 +1,5 @@
 {
-  "locale": "tr",
+  "locale": "tr","next":"Sonraki",
   "login_successful": "Giriş Başarılı",
   "take_care_of_your_health":"Sağlığınıza önem verin",
   "set_hipo_and_hiper_success":"Hipo Glisemi ve Hiper Glisemi Değerleri başarılı bir şekilde güncellendi",
