--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -1,5 +1,5 @@
 {
-  "locale": "fr",
+  "locale": "fr","next": "Suivant",
   "app_name": "Harpia",
   "login_successful": "Connexion réussie",
   "skip":"Passer","exercise": "Exercice","exercise_answer": "L'exercice est important, surtout pour prévenir les maladies cardiovasculaires. Par conséquent, il est bénéfique de pratiquer au moins 150 minutes d'exercice par semaine. Même une simple promenade peut vous aider à faire un pas vers une vie plus saine à l'avenir.",
