--- a/harpia_project_v2/assets/translations/zh.json
+++ b/harpia_project_v2/assets/translations/zh.json
@@ -1,5 +1,5 @@
 {
-  "locale": "zh",
+  "locale": "zh","next": "下一个",
   "app_name": "Harpia",
   "login_successful": "登录成功",
   "skip":"跳过","exercise": "运动",
