--- a/harpia_project_v2/assets/translations/fr.json
+++ b/harpia_project_v2/assets/translations/fr.json
@@ -1,7 +1,7 @@
 {
   "locale": "fr","next": "Suivant",
   "app_name": "Harpia",
-  "login_successful": "Connexion réussie",
+  "login_successful": "Connexion réussie",  "choose_theme": "Choisir un thème",
   "skip":"Passer","exercise": "Exercice","exercise_answer": "L'exercice est important, surtout pour prévenir les maladies cardiovasculaires. Par conséquent, il est bénéfique de pratiquer au moins 150 minutes d'exercice par semaine. Même une simple promenade peut vous aider à faire un pas vers une vie plus saine à l'avenir.",
   "healthy_eating": "Alimentation Saine",
   "healthy_eating_answer": "Une alimentation saine consiste à consommer une alimentation adéquate et équilibrée. Pour assurer le fonctionnement régulier et équilibré des cellules qui composent notre corps, nous devons consommer des quantités suffisantes de nutriments, notamment des lipides, des glucides, des protéines, des vitamines et des minéraux.",
